[gd_scene load_steps=7 format=3 uid="uid://dr8bhhq36kihh"]

[ext_resource type="Script" path="res://script/Fight.gd" id="1_pnjrw"]
[ext_resource type="Texture2D" uid="uid://c43i5hrrhawi6" path="res://assets/backgrounds/background1.png" id="2_a4234"]
[ext_resource type="Texture2D" uid="uid://dk8yspmeqggbm" path="res://assets/UI/button/stop_normal.png" id="3_phxoo"]
[ext_resource type="Texture2D" uid="uid://btaq2lqnicsn" path="res://assets/UI/button/stop_press.png" id="4_ork6o"]
[ext_resource type="Script" path="res://script/stop.gd" id="5_0ftwe"]
[ext_resource type="PackedScene" uid="uid://duhvr7l8d3eb0" path="res://sence/StopWindow.tscn" id="6_8sra2"]

[node name="Fight" type="Node2D"]
process_mode = 1
script = ExtResource("1_pnjrw")

[node name="Background1" type="Sprite2D" parent="."]
position = Vector2(417.5, 225)
texture = ExtResource("2_a4234")
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="Moneytext" type="Label" parent="."]
process_mode = 1
offset_left = 9.0
offset_top = 351.0
offset_right = 62.0
offset_bottom = 377.0
text = "Money"

[node name="Moneycount" type="Label" parent="."]
offset_left = 16.0
offset_top = 377.0
offset_right = 56.0
offset_bottom = 400.0

[node name="Moneytimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="StopButton" type="TextureButton" parent="."]
offset_left = 767.0
offset_top = 21.0
offset_right = 787.0
offset_bottom = 41.0
texture_normal = ExtResource("3_phxoo")
texture_pressed = ExtResource("4_ork6o")
texture_hover = ExtResource("4_ork6o")
script = ExtResource("5_0ftwe")

[node name="StopWindowLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="StopWindowLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.262745)

[node name="StopWindow" parent="StopWindowLayer" instance=ExtResource("6_8sra2")]
offset_left = 274.0
offset_top = 115.0
offset_right = 274.0
offset_bottom = 115.0

[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
[connection signal="timeout" from="Moneytimer" to="." method="_on_moneytimer_timeout"]
[connection signal="pressed" from="StopButton" to="StopButton" method="_on_pressed"]
